Add titles, helper and tests

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Main#about</h1>
-<p>Find me in app/views/main/about.html.erb</p>
+<% provide(:title, "About") %>
+<h1>About</h1>
+<p>
+  <em>Track My Mixes
+  </em> is a Social Network Template for Rails 4.2.0. It has been designed and coded by ALXS Design and will be used in production for a new cloud-based audio sharing and promotion web-app.
+</p>
