--- a/app/views/main/help.html.erb
+++ b/app/views/main/help.html.erb
@@ -1,2 +1,6 @@
-<h1>Main#help</h1>
-<p>Find me in app/views/main/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>
+  Get help on using the Back To The Anthems website, visit the
+  <a href="http://localhost:3000/main/help">Back To The Anthems help section</a>.
+</p>
