--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Main#home</h1>
-<p>Find me in app/views/main/home.html.erb</p>
+<div class="center jumbotron">
+<h1>SOCIAL NETWORK PROJECT
+<h2>
+  by
+  <a href="http://alxs.co.uk/">ALXS Web Design</a>
+</h2>
+<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
